Made multiple linear regression model

--- a/EDA2.ipynb
+++ b/EDA2.ipynb
@@ -52,7 +52,9 @@
   {
    "cell_type": "markdown",
    "id": "c56c1972-2c59-48c3-9ad7-10caf8efe566",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Initial Review"
    ]
@@ -2116,7 +2118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "id": "60e16a71-a20e-4744-bfda-e0be11ecc1e4",
    "metadata": {},
    "outputs": [
@@ -2141,7 +2143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "id": "420958a9-f3ab-4aba-a7f6-db138e1b6c7b",
    "metadata": {},
    "outputs": [
@@ -2174,7 +2176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 25,
    "id": "2f3b76bb-d15d-498d-b4a3-00d12bb61b36",
    "metadata": {},
    "outputs": [
@@ -2184,7 +2186,7 @@
        "<function matplotlib.pyplot.show(close=None, block=None)>"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2210,7 +2212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 26,
    "id": "9fda51e4-a288-4b32-ae86-e56e916da33e",
    "metadata": {},
    "outputs": [
@@ -2220,7 +2222,7 @@
        "<function matplotlib.pyplot.show(close=None, block=None)>"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2246,7 +2248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 27,
    "id": "fe5792f6-d419-4698-9017-bb72747405be",
    "metadata": {},
    "outputs": [
@@ -2256,7 +2258,7 @@
        "<function matplotlib.pyplot.show(close=None, block=None)>"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2290,7 +2292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 28,
    "id": "2b8e8157-3658-4ba4-91b8-176fbc377d0f",
    "metadata": {},
    "outputs": [
@@ -2308,7 +2310,7 @@
        "Name: GROC16, dtype: float64"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2320,7 +2322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 29,
    "id": "60215521-9ed8-4b3c-b286-5126934b2a64",
    "metadata": {},
    "outputs": [
@@ -2338,7 +2340,7 @@
        "Name: FFR16, dtype: float64"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2350,7 +2352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 30,
    "id": "0dd06dab-e6d6-4f24-b2b0-54bd0160ca46",
    "metadata": {},
    "outputs": [
@@ -2368,7 +2370,7 @@
        "Name: FSR16, dtype: float64"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2380,7 +2382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 31,
    "id": "efeb6da4-41ca-4b11-92fe-404741fa5a96",
    "metadata": {},
    "outputs": [
@@ -2398,7 +2400,7 @@
        "Name: SPECS16, dtype: float64"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2426,13 +2428,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 32,
    "id": "041eedf8-d2ce-4e20-889c-84b94758dc1e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ind = df[['Employed']]\n",
-    "dep = df[['GROC16']]"
+    "#ind = df[['GROC16']]\n",
+    "#dep = df[['Employed']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "da59f4be-b97b-4bfd-8421-4cd74eb946a2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = df[['GROC16', 'SPECS16','RECFAC16','WICS16']]\n",
+    "x = sm.add_constant(x)\n",
+    "y = df[['Employed']]"
    ]
   },
   {
@@ -2445,17 +2459,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 34,
    "id": "d3cdf51c-9c3b-49a3-856c-a5fbc444f589",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ind_train, ind_test, dep_train, dep_test = train_test_split(ind, dep, test_size=.25)"
+    "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size=.25)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 35,
    "id": "654608ec-d85c-405a-80fb-7245cc3cd2aa",
    "metadata": {},
    "outputs": [
@@ -2463,14 +2477,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(2355, 1) (785, 1)\n",
+      "(2355, 5) (785, 5)\n",
       "(2355, 1) (785, 1)\n"
      ]
     }
    ],
    "source": [
-    "print(ind_train.shape, ind_test.shape)\n",
-    "print(dep_train.shape, dep_test.shape)"
+    "print(x_train.shape, x_test.shape)\n",
+    "print(y_train.shape, y_test.shape)"
    ]
   },
   {
@@ -2478,12 +2492,12 @@
    "id": "de41b4d8-4bdc-4524-9114-af88ea38ef4f",
    "metadata": {},
    "source": [
-    "### Linear Regression model"
+    "### Multiple Linear Regression model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 36,
    "id": "f84a9e59-ec69-4777-a83c-26c3dcbc9313",
    "metadata": {},
    "outputs": [],
@@ -2493,7 +2507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 37,
    "id": "460b4e67-a201-428e-b65c-bdba1fab8a34",
    "metadata": {},
    "outputs": [
@@ -2506,40 +2520,215 @@
        "LinearRegression()"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "rModel.fit(ind_train, dep_train)"
+    "rModel.fit(x_train, x_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 38,
    "id": "2f4e7637-d84f-49a6-bd30-767c820c93a9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.011059704260125147"
+       "1.0"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "rModel.score(ind_test, dep_test)"
+    "rModel.score(x_test, x_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "e0a2c8be-3650-4813-94e0-1bb99c0ab74d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = sm.OLS(y_train, x_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "c1f1d13d-bb88-4dab-b88c-a39dad8d6b47",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_fitted = model.fit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "44a2c146-0a84-4034-a048-0f21584ed38e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"simpletable\">\n",
+       "<caption>OLS Regression Results</caption>\n",
+       "<tr>\n",
+       "  <th>Dep. Variable:</th>        <td>Employed</td>     <th>  R-squared:         </th> <td>   0.025</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Model:</th>                   <td>OLS</td>       <th>  Adj. R-squared:    </th> <td>   0.023</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Method:</th>             <td>Least Squares</td>  <th>  F-statistic:       </th> <td>   14.81</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Date:</th>             <td>Fri, 14 Jun 2024</td> <th>  Prob (F-statistic):</th> <td>5.95e-12</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Time:</th>                 <td>17:48:44</td>     <th>  Log-Likelihood:    </th> <td> -32892.</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>No. Observations:</th>      <td>  2355</td>      <th>  AIC:               </th> <td>6.579e+04</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Df Residuals:</th>          <td>  2350</td>      <th>  BIC:               </th> <td>6.582e+04</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Df Model:</th>              <td>     4</td>      <th>                     </th>     <td> </td>    \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Covariance Type:</th>      <td>nonrobust</td>    <th>                     </th>     <td> </td>    \n",
+       "</tr>\n",
+       "</table>\n",
+       "<table class=\"simpletable\">\n",
+       "<tr>\n",
+       "      <td></td>        <th>coef</th>     <th>std err</th>      <th>t</th>      <th>P>|t|</th>  <th>[0.025</th>    <th>0.975]</th>  \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>const</th>    <td> 2.726e+05</td> <td> 6164.710</td> <td>   44.216</td> <td> 0.000</td> <td>  2.6e+05</td> <td> 2.85e+05</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>GROC16</th>   <td>  212.1093</td> <td>  279.668</td> <td>    0.758</td> <td> 0.448</td> <td> -336.312</td> <td>  760.531</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>SPECS16</th>  <td> -279.2907</td> <td> 1016.820</td> <td>   -0.275</td> <td> 0.784</td> <td>-2273.249</td> <td> 1714.668</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>RECFAC16</th> <td>  955.0869</td> <td>  366.154</td> <td>    2.608</td> <td> 0.009</td> <td>  237.069</td> <td> 1673.105</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>WICS16</th>   <td>   44.9237</td> <td>  288.903</td> <td>    0.155</td> <td> 0.876</td> <td> -521.607</td> <td>  611.454</td>\n",
+       "</tr>\n",
+       "</table>\n",
+       "<table class=\"simpletable\">\n",
+       "<tr>\n",
+       "  <th>Omnibus:</th>       <td>776.849</td> <th>  Durbin-Watson:     </th> <td>   2.046</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Prob(Omnibus):</th> <td> 0.000</td>  <th>  Jarque-Bera (JB):  </th> <td>1952.721</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Skew:</th>          <td> 1.826</td>  <th>  Prob(JB):          </th> <td>    0.00</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Kurtosis:</th>      <td> 5.563</td>  <th>  Cond. No.          </th> <td>    121.</td>\n",
+       "</tr>\n",
+       "</table><br/><br/>Notes:<br/>[1] Standard Errors assume that the covariance matrix of the errors is correctly specified."
+      ],
+      "text/latex": [
+       "\\begin{center}\n",
+       "\\begin{tabular}{lclc}\n",
+       "\\toprule\n",
+       "\\textbf{Dep. Variable:}    &     Employed     & \\textbf{  R-squared:         } &     0.025   \\\\\n",
+       "\\textbf{Model:}            &       OLS        & \\textbf{  Adj. R-squared:    } &     0.023   \\\\\n",
+       "\\textbf{Method:}           &  Least Squares   & \\textbf{  F-statistic:       } &     14.81   \\\\\n",
+       "\\textbf{Date:}             & Fri, 14 Jun 2024 & \\textbf{  Prob (F-statistic):} &  5.95e-12   \\\\\n",
+       "\\textbf{Time:}             &     17:48:44     & \\textbf{  Log-Likelihood:    } &   -32892.   \\\\\n",
+       "\\textbf{No. Observations:} &        2355      & \\textbf{  AIC:               } & 6.579e+04   \\\\\n",
+       "\\textbf{Df Residuals:}     &        2350      & \\textbf{  BIC:               } & 6.582e+04   \\\\\n",
+       "\\textbf{Df Model:}         &           4      & \\textbf{                     } &             \\\\\n",
+       "\\textbf{Covariance Type:}  &    nonrobust     & \\textbf{                     } &             \\\\\n",
+       "\\bottomrule\n",
+       "\\end{tabular}\n",
+       "\\begin{tabular}{lcccccc}\n",
+       "                  & \\textbf{coef} & \\textbf{std err} & \\textbf{t} & \\textbf{P$> |$t$|$} & \\textbf{[0.025} & \\textbf{0.975]}  \\\\\n",
+       "\\midrule\n",
+       "\\textbf{const}    &    2.726e+05  &     6164.710     &    44.216  &         0.000        &      2.6e+05    &     2.85e+05     \\\\\n",
+       "\\textbf{GROC16}   &     212.1093  &      279.668     &     0.758  &         0.448        &     -336.312    &      760.531     \\\\\n",
+       "\\textbf{SPECS16}  &    -279.2907  &     1016.820     &    -0.275  &         0.784        &    -2273.249    &     1714.668     \\\\\n",
+       "\\textbf{RECFAC16} &     955.0869  &      366.154     &     2.608  &         0.009        &      237.069    &     1673.105     \\\\\n",
+       "\\textbf{WICS16}   &      44.9237  &      288.903     &     0.155  &         0.876        &     -521.607    &      611.454     \\\\\n",
+       "\\bottomrule\n",
+       "\\end{tabular}\n",
+       "\\begin{tabular}{lclc}\n",
+       "\\textbf{Omnibus:}       & 776.849 & \\textbf{  Durbin-Watson:     } &    2.046  \\\\\n",
+       "\\textbf{Prob(Omnibus):} &   0.000 & \\textbf{  Jarque-Bera (JB):  } & 1952.721  \\\\\n",
+       "\\textbf{Skew:}          &   1.826 & \\textbf{  Prob(JB):          } &     0.00  \\\\\n",
+       "\\textbf{Kurtosis:}      &   5.563 & \\textbf{  Cond. No.          } &     121.  \\\\\n",
+       "\\bottomrule\n",
+       "\\end{tabular}\n",
+       "%\\caption{OLS Regression Results}\n",
+       "\\end{center}\n",
+       "\n",
+       "Notes: \\newline\n",
+       " [1] Standard Errors assume that the covariance matrix of the errors is correctly specified."
+      ],
+      "text/plain": [
+       "<class 'statsmodels.iolib.summary.Summary'>\n",
+       "\"\"\"\n",
+       "                            OLS Regression Results                            \n",
+       "==============================================================================\n",
+       "Dep. Variable:               Employed   R-squared:                       0.025\n",
+       "Model:                            OLS   Adj. R-squared:                  0.023\n",
+       "Method:                 Least Squares   F-statistic:                     14.81\n",
+       "Date:                Fri, 14 Jun 2024   Prob (F-statistic):           5.95e-12\n",
+       "Time:                        17:48:44   Log-Likelihood:                -32892.\n",
+       "No. Observations:                2355   AIC:                         6.579e+04\n",
+       "Df Residuals:                    2350   BIC:                         6.582e+04\n",
+       "Df Model:                           4                                         \n",
+       "Covariance Type:            nonrobust                                         \n",
+       "==============================================================================\n",
+       "                 coef    std err          t      P>|t|      [0.025      0.975]\n",
+       "------------------------------------------------------------------------------\n",
+       "const       2.726e+05   6164.710     44.216      0.000     2.6e+05    2.85e+05\n",
+       "GROC16       212.1093    279.668      0.758      0.448    -336.312     760.531\n",
+       "SPECS16     -279.2907   1016.820     -0.275      0.784   -2273.249    1714.668\n",
+       "RECFAC16     955.0869    366.154      2.608      0.009     237.069    1673.105\n",
+       "WICS16        44.9237    288.903      0.155      0.876    -521.607     611.454\n",
+       "==============================================================================\n",
+       "Omnibus:                      776.849   Durbin-Watson:                   2.046\n",
+       "Prob(Omnibus):                  0.000   Jarque-Bera (JB):             1952.721\n",
+       "Skew:                           1.826   Prob(JB):                         0.00\n",
+       "Kurtosis:                       5.563   Cond. No.                         121.\n",
+       "==============================================================================\n",
+       "\n",
+       "Notes:\n",
+       "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
+       "\"\"\""
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model_fitted.summary()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e0a2c8be-3650-4813-94e0-1bb99c0ab74d",
+   "id": "4b334724-ff3d-4ba8-9f69-1c4df0bae386",
    "metadata": {},
    "outputs": [],
    "source": []
