--- a/EDA_Final.ipynb
+++ b/EDA_Final.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# Food Desert Investigation -- Exploratory Data Analysis\n",
-    "Hypothesis: Access to grocery stores, specialty food stores, and recreation centers are measures populations with higher education and employment outcomes."
+    "Hypothesis: Access to grocery stores, specialty food stores, and recreation centers are measures of populations with higher educational and employment outcomes."
    ]
   },
   {
@@ -38,6 +38,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "bd928a11-55ef-48ef-acec-03c4ad297baf",
+   "metadata": {},
+   "source": [
+    "### Data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 84,
    "id": "38b8574e-8d53-4900-a9ab-3acf9a770d3c",
@@ -54,7 +62,14 @@
    "id": "c56c1972-2c59-48c3-9ad7-10caf8efe566",
    "metadata": {},
    "source": [
-    "## Initial Review"
+    "## Initial Review\n",
+    "### Column Name Reminders:\n",
+    "* SFSP (Summer Food Service Participants)\n",
+    "* SBP (School Breakfast Program participants)\n",
+    "* NSLP (National School Lunch Program)\n",
+    "* WIC (Women, Infant, and Children supplemental nutrition program)\n",
+    "* SNAP (Supplemental Nutrition Assistance Program)\n",
+    "* CACFP (Child and Adult [% population])"
    ]
   },
   {
@@ -647,6 +662,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "61c8535c-1c1f-4680-a0b7-ed19ec815037",
+   "metadata": {},
+   "source": [
+    "### Spread"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1fbfd06c-3153-455b-a746-70deed8ed23a",
+   "metadata": {},
+   "source": [
+    "I am using histograms to examine the spread of every variable.\n",
+    "\n",
+    "Key Notes:\n",
+    "* FIPS is the code assigned to each County, State, so the spread is not important to consider since there is one value for each instance.\n",
+    "* FFR16, FSR16, GROC16, RECFAC16, SPECS16, WICS16 are all counts of stores in each county, so the concentration of values close to zero makes sense.\n",
+    "* Outliers for columns for racial groups make sense given the makeup of certain American counties (ie. Hawaiian has a large Asian population).\n",
+    "* SNAP_BBCE16 is a categorical variable, so I will change that from int to category."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 88,
    "id": "ebc58c64-8ac7-4401-8c6c-df349bc9cea6",
@@ -671,16 +708,14 @@
   {
    "cell_type": "markdown",
    "id": "a009e8c3-51b8-40b6-a9ae-951dc3435059",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
-    "### Comparisons using .describe()"
+    "## Summary Statistics for Stores Variables"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 115,
    "id": "2b8e8157-3658-4ba4-91b8-176fbc377d0f",
    "metadata": {},
    "outputs": [
@@ -698,7 +733,7 @@
        "Name: GROC16, dtype: float64"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -797,22 +832,6 @@
     "# Specialty food stores\n",
     "df['SPECS16'].describe()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4b334724-ff3d-4ba8-9f69-1c4df0bae386",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5491fb4e-bc03-4671-a1d4-de8df10236fa",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1774,6 +1793,18 @@
    "source": [
     "corr = df.corr(numeric_only=True)\n",
     "corr"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "42d67443-7749-4832-9a03-4cc58b69a622",
+   "metadata": {},
+   "source": [
+    "### Correlation findings:\n",
+    "The correlation printout above shows the following:\n",
+    "* GROC16 is highly correlated with all other restaurants/stores (CONVS16, FFR16, FSR16, RECFAC16, SPECS16, SUPERC16, WICS16). All these are correlated with each other as well.\n",
+    "* Bachelors is highly correlated with Employed, Unemployed, HS_GED, all racial groups, WIC_PART_2016, State_Population_2016, SFSP_Part_2016, SBP_PART_2016, NSLP_PART_2016, and CACFP_PART_2016.\n",
+    "* Employed is highly correlated with CACFP_PART_2016, NSLP_PART_2016, SBP_PART_2016, State_Population_2016, WIC_PART_2016, all racial factors, all educational factors, and Unemployed."
    ]
   },
   {
