--- a/EDA_Final.ipynb
+++ b/EDA_Final.ipynb
@@ -1837,7 +1837,8 @@
    "id": "d7edfbba-0832-44c6-805d-7b3c2dcb4f9a",
    "metadata": {},
    "source": [
-    "Correlation -- Sorted (Absolute Value)"
+    "### Correlation -- Sorted (Absolute Value)\n",
+    "I am creating the correlation distribution below to sort pairs of variables by correlation. This means pairs with the highest correlations will be at the top and those that are less correlated will at the bottom. I've also only included pairs with an absolute value correlation of greater than 0.6."
    ]
   },
   {
@@ -1869,7 +1870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 116,
    "id": "7d5722de-4755-4fdd-9d5f-34b3721dc260",
    "metadata": {
     "tags": []
@@ -1926,8 +1927,39 @@
        "      <th>Employed</th>\n",
        "      <td>0.991725</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CACFP_PART_2016</th>\n",
+       "      <th>SFSP_PART_2016</th>\n",
+       "      <td>0.634441</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SPECS16</th>\n",
+       "      <th>SUPERC16</th>\n",
+       "      <td>0.631263</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SUPERC16</th>\n",
+       "      <th>SPECS16</th>\n",
+       "      <td>0.631263</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SFSP_PART_2016</th>\n",
+       "      <th>Employed</th>\n",
+       "      <td>0.622302</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Employed</th>\n",
+       "      <th>SFSP_PART_2016</th>\n",
+       "      <td>0.622302</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>240 rows × 1 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1936,17 +1968,34 @@
        "NSLP_PART_2016        SBP_PART_2016   0.992469\n",
        "WIC_PART_2016         Employed        0.992069\n",
        "Employed              WIC_PART_2016   0.992069\n",
-       "State_Population_2016 Employed        0.991725"
+       "State_Population_2016 Employed        0.991725\n",
+       "...                                        ...\n",
+       "CACFP_PART_2016       SFSP_PART_2016  0.634441\n",
+       "SPECS16               SUPERC16        0.631263\n",
+       "SUPERC16              SPECS16         0.631263\n",
+       "SFSP_PART_2016        Employed        0.622302\n",
+       "Employed              SFSP_PART_2016  0.622302\n",
+       "\n",
+       "[240 rows x 1 columns]"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "sorted_correlation = pd.DataFrame(so)\n",
-    "sorted_correlation.head()"
+    "sorted_correlation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e3e1b914-03ef-43e3-b665-5c75afe0dccd",
+   "metadata": {},
+   "source": [
+    "#### Sorted correlation findings:\n",
+    "SBP_PART_2016 (School Breakfast Program) and NSLP_PART_2016 (National School Lunch Program) are the most highly correlated columns. This is because the requirements for both programs are the same.\n"
    ]
   },
   {
