--- a/EDA_Final.ipynb
+++ b/EDA_Final.ipynb
@@ -1995,7 +1995,10 @@
    "metadata": {},
    "source": [
     "#### Sorted correlation findings:\n",
-    "SBP_PART_2016 (School Breakfast Program) and NSLP_PART_2016 (National School Lunch Program) are the most highly correlated columns. This is because the requirements for both programs are the same.\n"
+    "SBP_PART_2016 (School Breakfast Program) and NSLP_PART_2016 (National School Lunch Program) are the most highly correlated columns. This is because the requirements for both programs are the same. I've included fact sheets for these programs in my repository in a folder called \"Fact Sheets.\"\n",
+    "Gov't website links:\n",
+    "* SBP: https://www.fns.usda.gov/sbp/school-breakfast-program\n",
+    "* NSLP: https://www.fns.usda.gov/nslp"
    ]
   },
   {
