--- a/EDA_Final.ipynb
+++ b/EDA_Final.ipynb
@@ -2150,8 +2150,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 120,
    "id": "1cb58345-96a9-461c-b7c1-ed075442c516",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>FFR16</th>\n",
+       "      <th>FSR16</th>\n",
+       "      <th>Population_Estimate_2016</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>State</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>AK</th>\n",
+       "      <td>421</td>\n",
+       "      <td>578</td>\n",
+       "      <td>733330</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AL</th>\n",
+       "      <td>3822</td>\n",
+       "      <td>2821</td>\n",
+       "      <td>4864745</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AR</th>\n",
+       "      <td>2014</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>2990410</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AZ</th>\n",
+       "      <td>4585</td>\n",
+       "      <td>4157</td>\n",
+       "      <td>6945452</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CA</th>\n",
+       "      <td>29995</td>\n",
+       "      <td>30798</td>\n",
+       "      <td>39209127</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       FFR16  FSR16  Population_Estimate_2016\n",
+       "State                                        \n",
+       "AK       421    578                    733330\n",
+       "AL      3822   2821                   4864745\n",
+       "AR      2014   2015                   2990410\n",
+       "AZ      4585   4157                   6945452\n",
+       "CA     29995  30798                  39209127"
+      ]
+     },
+     "execution_count": 120,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rest_pop = df.groupby('State')[['FFR16','FSR16','Population_Estimate_2016']].sum()\n",
+    "rest_pop.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "id": "d94a5153-e270-41da-affe-d02fc9b45b79",
    "metadata": {
     "tags": []
    },
