--- a/TrainingDataDev.ipynb
+++ b/TrainingDataDev.ipynb
@@ -1342,6 +1342,39 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b50b1a35-6d60-4a3c-a608-34effb6e4fc0",
+   "metadata": {},
+   "source": [
+    "## Cross-validation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "5c5d41f0-97b0-40a2-b0c3-8e748d954603",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'LinearRegression' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[50], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmodel_selection\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m cross_val_score, KFold\n\u001b[1;32m      2\u001b[0m kf \u001b[38;5;241m=\u001b[39m KFold(n_splits\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m6\u001b[39m, shuffle\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m, random_state\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m42\u001b[39m)\n\u001b[0;32m----> 3\u001b[0m reg \u001b[38;5;241m=\u001b[39m LinearRegression()\n\u001b[1;32m      4\u001b[0m cv_results \u001b[38;5;241m=\u001b[39m cross_val_score(reg, X, y, cv\u001b[38;5;241m=\u001b[39mkf)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'LinearRegression' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import cross_val_score, KFold\n",
+    "kf = KFold(n_splits=6, shuffle=True, random_state=42)\n",
+    "reg = LinearRegression()\n",
+    "cv_results = cross_val_score(reg, X, y, cv=kf)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "9f8b08b9-458e-4550-a3dd-ccb73dfe6417",
    "metadata": {},
    "source": [
