--- a/Modeling.ipynb
+++ b/Modeling.ipynb
@@ -2892,37 +2892,37 @@
       "cell_type": "code",
       "source": [
         "# Create a model metrics text file comparing multiple clustering algorithms\n",
-        "with open('clustering_model_metrics_comparison.txt', 'w') as metrics_file:\n",
-        "    metrics_file.write(\"Model: K-Means\\n\")\n",
-        "    metrics_file.write(\"Hyperparameters: n_clusters=7, random_state=42\\n\")\n",
-        "    metrics_file.write(\"Number of Clusters: 7\\n\")\n",
-        "    metrics_file.write(f\"Silhouette Score: {kmeans_silhouette:.3f}\\n\\n\")\n",
+        "with open('model_metrics.txt', 'w') as file:\n",
+        "    file.write(\"Model: K-Means\\n\")\n",
+        "    file.write(\"Hyperparameters: n_clusters=7, random_state=42\\n\")\n",
+        "    file.write(\"Number of Clusters: 7\\n\")\n",
+        "    file.write(f\"Silhouette Score: {kmeans_silhouette:.3f}\\n\\n\")\n",
         "\n",
-        "    metrics_file.write(\"Model: Affinity Propagation\\n\")\n",
-        "    metrics_file.write(\"Hyperparameters: random_state=42\\n\")\n",
-        "    metrics_file.write(f\"Number of Clusters: {len(set(affinity_labels))}\\n\")\n",
-        "    metrics_file.write(f\"Silhouette Score: {affinity_silhouette:.3f}\\n\\n\")\n",
+        "    file.write(\"Model: Affinity Propagation\\n\")\n",
+        "    file.write(\"Hyperparameters: random_state=42\\n\")\n",
+        "    file.write(f\"Number of Clusters: {len(set(affinity_labels))}\\n\")\n",
+        "    file.write(f\"Silhouette Score: {affinity_silhouette:.3f}\\n\\n\")\n",
         "\n",
-        "    metrics_file.write(\"Model: Spectral Clustering\\n\")\n",
-        "    metrics_file.write(\"Hyperparameters: n_clusters=15, random_state=42\\n\")\n",
-        "    metrics_file.write(\"Number of Clusters: 15\\n\")\n",
-        "    metrics_file.write(f\"Silhouette Score: {spectral_silhouette:.3f}\\n\\n\")\n",
+        "    file.write(\"Model: Spectral Clustering\\n\")\n",
+        "    file.write(\"Hyperparameters: n_clusters=15, random_state=42\\n\")\n",
+        "    file.write(\"Number of Clusters: 15\\n\")\n",
+        "    file.write(f\"Silhouette Score: {spectral_silhouette:.3f}\\n\\n\")\n",
         "\n",
-        "    metrics_file.write(\"Model: Agglomerative Clustering\\n\")\n",
-        "    metrics_file.write(\"Hyperparameters: n_clusters=2, distance_threshold=1.0\\n\")\n",
-        "    metrics_file.write(\"Number of Clusters: 2\\n\")\n",
-        "    metrics_file.write(f\"Silhouette Score: {agglomerative_silhouette:.3f}\\n\\n\")\n",
+        "    file.write(\"Model: Agglomerative Clustering\\n\")\n",
+        "    file.write(\"Hyperparameters: n_clusters=2, distance_threshold=1.0\\n\")\n",
+        "    file.write(\"Number of Clusters: 2\\n\")\n",
+        "    file.write(f\"Silhouette Score: {agglomerative_silhouette:.3f}\\n\\n\")\n",
         "\n",
-        "    metrics_file.write(\"Model: DBSCAN\\n\")\n",
-        "    metrics_file.write(\"Hyperparameters: eps=2, min_samples=3\\n\")\n",
-        "    metrics_file.write(f\"Number of Clusters: {len(set(dbscan_labels))}\\n\")\n",
-        "    metrics_file.write(f\"Silhouette Score: {dbscan_silhouette}\\n\")\n"
+        "    file.write(\"Model: DBSCAN\\n\")\n",
+        "    file.write(\"Hyperparameters: eps=2, min_samples=3\\n\")\n",
+        "    file.write(f\"Number of Clusters: {len(set(dbscan_labels))}\\n\")\n",
+        "    file.write(f\"Silhouette Score: {dbscan_silhouette}\\n\")\n"
       ],
       "metadata": {
         "id": "7WnfwNNif68P"
       },
       "id": "7WnfwNNif68P",
-      "execution_count": 138,
+      "execution_count": 141,
       "outputs": []
     }
   ],
