Downloading txt file

--- a/Modeling.ipynb
+++ b/Modeling.ipynb
@@ -32,7 +32,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 91,
+      "execution_count": 145,
       "id": "afc8e903-1d42-4475-b6ad-15fda0b2a787",
       "metadata": {
         "id": "afc8e903-1d42-4475-b6ad-15fda0b2a787"
@@ -131,10 +131,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6ioJ3b7_IObq",
-        "outputId": "63bd00ff-0eba-48e1-8e75-7d9b2990501c"
+        "outputId": "9d9dbf86-adcd-43b3-d2d0-cbbd617800d2"
       },
       "id": "6ioJ3b7_IObq",
-      "execution_count": 95,
+      "execution_count": 147,
       "outputs": [
         {
           "output_type": "stream",
@@ -144,6 +144,19 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from google.colab import files\n",
+        "import io"
+      ],
+      "metadata": {
+        "id": "gMikyo8WlbnW"
+      },
+      "id": "gMikyo8WlbnW",
+      "execution_count": 149,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -2916,13 +2929,95 @@
         "    file.write(\"Model: DBSCAN\\n\")\n",
         "    file.write(\"Hyperparameters: eps=2, min_samples=3\\n\")\n",
         "    file.write(f\"Number of Clusters: {len(set(dbscan_labels))}\\n\")\n",
-        "    file.write(f\"Silhouette Score: {dbscan_silhouette}\\n\")\n"
+        "    file.write(f\"Silhouette Score: {dbscan_silhouette}\\n\")\n",
+        "\n",
+        "files.download('model_metrics.txt')"
       ],
       "metadata": {
-        "id": "7WnfwNNif68P"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 17
+        },
+        "id": "7WnfwNNif68P",
+        "outputId": "ae183cbb-4e51-4c99-912b-16999d2d2827"
       },
       "id": "7WnfwNNif68P",
-      "execution_count": 141,
+      "execution_count": 150,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ],
+            "application/javascript": [
+              "\n",
+              "    async function download(id, filename, size) {\n",
+              "      if (!google.colab.kernel.accessAllowed) {\n",
+              "        return;\n",
+              "      }\n",
+              "      const div = document.createElement('div');\n",
+              "      const label = document.createElement('label');\n",
+              "      label.textContent = `Downloading \"${filename}\": `;\n",
+              "      div.appendChild(label);\n",
+              "      const progress = document.createElement('progress');\n",
+              "      progress.max = size;\n",
+              "      div.appendChild(progress);\n",
+              "      document.body.appendChild(div);\n",
+              "\n",
+              "      const buffers = [];\n",
+              "      let downloaded = 0;\n",
+              "\n",
+              "      const channel = await google.colab.kernel.comms.open(id);\n",
+              "      // Send a message to notify the kernel that we're ready.\n",
+              "      channel.send({})\n",
+              "\n",
+              "      for await (const message of channel.messages) {\n",
+              "        // Send a message to notify the kernel that we're ready.\n",
+              "        channel.send({})\n",
+              "        if (message.buffers) {\n",
+              "          for (const buffer of message.buffers) {\n",
+              "            buffers.push(buffer);\n",
+              "            downloaded += buffer.byteLength;\n",
+              "            progress.value = downloaded;\n",
+              "          }\n",
+              "        }\n",
+              "      }\n",
+              "      const blob = new Blob(buffers, {type: 'application/binary'});\n",
+              "      const a = document.createElement('a');\n",
+              "      a.href = window.URL.createObjectURL(blob);\n",
+              "      a.download = filename;\n",
+              "      div.appendChild(a);\n",
+              "      a.click();\n",
+              "      div.remove();\n",
+              "    }\n",
+              "  "
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ],
+            "application/javascript": [
+              "download(\"download_e3b449f5-bb54-4ffa-a445-bf10adab8076\", \"model_metrics.txt\", 588)"
+            ]
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "_4jan-XVlD6H"
+      },
+      "id": "_4jan-XVlD6H",
+      "execution_count": null,
       "outputs": []
     }
   ],
